# afc_sync

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  afc_sync.c  meson.build
lib/: imobiledevice.lib
